@@ -120,7 +120,7 @@ The following submitted code, packages or analysis, and deserve special thanks:
   ribbon
   Daniel Shahaf
   Johannes Wienke
-  Harley Pig
+  Alan Young
 
 Thanks to the following, who submitted detailed bug reports and excellent
 suggestions:
