@@ -140,6 +140,8 @@
 - TW-1671 task add: segfault with foo-bar:1 (thanks to Daniel Shahaf).
 - TW-1675 project.not:something doesn't exclude project:something.subprojects
           (thanks to Ander).
+- TW-1687 task add due:som appears to be interpreted as 'someday' (thanks to
+          Alan Young).
 - Prevent potential task duplication during import for non-pending tasks.
 - Show the active context in "context list", if any is active.
 - Fix "task edit" dropping annotation text after newlines.
